--- a/src/components/ministries/Grid.astro
+++ b/src/components/ministries/Grid.astro
@@ -3,12 +3,12 @@ import Item from '~/components/ministries/GridItem.astro';
 import type { Ministry } from '~/types';
 
 export interface Props {
-  posts: Array<Ministry>;
+  ministries: Array<Ministry>;
 }
 
-const { posts } = Astro.props;
+const { ministries } = Astro.props;
 ---
 
 <div class="grid gap-6 row-gap-5 md:grid-cols-2 lg:grid-cols-4 -mb-6">
-  {posts.map((post) => <Item post={post} />)}
+  {ministries.map((ministry) => <Item ministry={ministry} />)}
 </div>
