--- a/src/components/ministries/GridItem.astro
+++ b/src/components/ministries/GridItem.astro
@@ -8,13 +8,13 @@ import { findImage } from '~/utils/images';
 import { getPermalink } from '~/utils/permalinks';
 
 export interface Props {
-  post: Ministry;
+  ministry: Ministry;
 }
 
-const { post } = Astro.props;
-const image = await findImage(post.image);
+const { ministry } = Astro.props;
+const image = await findImage(ministry.image);
 
-const link = APP_MINISTRIES?.post?.isEnabled ? getPermalink(post.permalink, 'post') : '';
+const link = APP_MINISTRIES?.post?.isEnabled ? getPermalink(ministry.permalink, 'ministry') : '';
 ---
 
 <article
@@ -31,7 +31,7 @@ const link = APP_MINISTRIES?.post?.isEnabled ? getPermalink(post.permalink, 'pos
               widths={[400, 900]}
               width={400}
               sizes="(max-width: 900px) 400px, 900px"
-              alt={post.title}
+              alt={ministry.title}
               aspectRatio="16:9"
               layout="cover"
               loading="lazy"
@@ -45,7 +45,7 @@ const link = APP_MINISTRIES?.post?.isEnabled ? getPermalink(post.permalink, 'pos
             widths={[400, 900]}
             width={400}
             sizes="(max-width: 900px) 400px, 900px"
-            alt={post.title}
+            alt={ministry.title}
             aspectRatio="16:9"
             layout="cover"
             loading="lazy"
@@ -59,13 +59,13 @@ const link = APP_MINISTRIES?.post?.isEnabled ? getPermalink(post.permalink, 'pos
     {
       link ? (
         <a class="inline-block hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200" href={link}>
-          {post.title}
+          {ministry.title}
         </a>
       ) : (
-        post.title
+        ministry.title
       )
     }
   </h3>
 
-  <p class="text-muted dark:text-slate-400 text-lg">{post.excerpt}</p>
+  <p class="text-muted dark:text-slate-400 text-lg">{ministry.excerpt}</p>
 </article>
