--- a/src/pages/ministries/index.astro
+++ b/src/pages/ministries/index.astro
@@ -27,6 +27,6 @@ const metadata = {
 <Layout metadata={metadata}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline>Ministries</Headline>
-    <MinistriesList posts={ministries} />
+    <MinistriesList ministries={ministries} />
   </section>
 </Layout>
