--- a/src/components/ministries/ListItem.astro
+++ b/src/components/ministries/ListItem.astro
@@ -3,7 +3,6 @@ import type { ImageMetadata } from 'astro';
 import { Icon } from 'astro-icon/components';
 import Image from '~/components/common/Image.astro';
 
-import { APP_MINISTRIES } from 'astrowind:config';
 import type { Ministry } from '~/types';
 
 import { getPermalink } from '~/utils/permalinks';
@@ -16,7 +15,7 @@ export interface Props {
 const { ministry } = Astro.props;
 const image = (await findImage(ministry.image)) as ImageMetadata | undefined;
 
-const link = APP_MINISTRIES?.ministries?.isEnabled ? getPermalink(ministry.permalink, 'ministry') : '';
+const link = getPermalink(ministry.permalink, 'ministry');
 ---
 
 <article
