--- a/src/pages/ministries/[ministries]/index.astro
+++ b/src/pages/ministries/[ministries]/index.astro
@@ -8,7 +8,7 @@ import SingleMinistery from '~/components/ministries/SingleMinistry.astro';
 import ToMinistryLink from '~/components/ministries/ToMinistryLink.astro';
 
 import { getCanonical, getPermalink } from '~/utils/permalinks';
-import { getStaticPathsMinistries, ministriesPostRobots } from '~/utils/ministries';
+import { getStaticPathsMinistries, ministriesRobots } from '~/utils/ministries';
 import { findImage } from '~/utils/images';
 import type { MetaData } from '~/types';
 
@@ -30,8 +30,8 @@ const metadata = merge(
     title: ministry.title,
     description: ministry.excerpt,
     robots: {
-      index: ministriesPostRobots?.index,
-      follow: ministriesPostRobots?.follow,
+      index: ministriesRobots?.index,
+      follow: ministriesRobots?.follow,
     },
     openGraph: {
       type: 'article',
