feat: sermons list view phase 1

--- a/src/components/series/ListItem.astro
+++ b/src/components/series/ListItem.astro
@@ -98,6 +98,7 @@ const link = getPermalink(series.permalink, 'series');
             series.title
           )
         }
+        <span>- {series.count}</span>
       </h2>
     </header>
   </div>
