--- a/src/components/sermons/SingleSermon.astro
+++ b/src/components/sermons/SingleSermon.astro
@@ -1,41 +1,41 @@
 ---
 import Image from '~/components/common/Image.astro';
-import type { Ministry } from '~/types';
+import type { Sermon } from '~/types';
 
 export interface Props {
-  ministry: Ministry;
+  sermon: Sermon;
   url: string | URL;
 }
 
-const { ministry } = Astro.props;
+const { sermon } = Astro.props;
 ---
 
 <section class="py-8 sm:py-16 lg:py-20 mx-auto">
   <article>
     <header
-      class={ministry.image
+      class={sermon.image
         ? 'intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade'
         : 'intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade'}
     >
       <h1
         class="px-4 sm:px-6 max-w-3xl mx-auto text-4xl md:text-5xl font-bold leading-tighter tracking-tighter font-heading"
       >
-        {ministry.title}
+        {sermon.title}
       </h1>
       <p
         class="max-w-3xl mx-auto mt-4 mb-8 px-4 sm:px-6 text-xl md:text-2xl text-muted dark:text-slate-400 text-justify"
       >
-        {ministry.excerpt}
+        {sermon.title}
       </p>
 
       {
-        ministry.image ? (
+        sermon.image ? (
           <Image
-            src={ministry.image}
+            src={sermon.image}
             class="max-w-full lg:max-w-[900px] mx-auto mb-6 sm:rounded-md bg-gray-400 dark:bg-slate-700"
             widths={[400, 900]}
             sizes="(max-width: 900px) 400px, 900px"
-            alt={ministry?.excerpt || ''}
+            alt={sermon?.title || ''}
             width={900}
             height={506}
             loading="eager"
