--- a/src/components/sermons/Grid.astro
+++ b/src/components/sermons/Grid.astro
@@ -1,14 +1,14 @@
 ---
-import Item from '~/components/ministries/GridItem.astro';
-import type { Ministry } from '~/types';
+import Item from '~/components/sermons/GridItem.astro';
+import type { Sermon } from '~/types';
 
 export interface Props {
-  ministries: Array<Ministry>;
+  sermons: Array<Sermon>;
 }
 
-const { ministries } = Astro.props;
+const { sermons } = Astro.props;
 ---
 
 <div class="grid gap-6 row-gap-5 md:grid-cols-2 lg:grid-cols-4 -mb-6">
-  {ministries.map((ministry) => <Item ministry={ministry} />)}
+  {sermons.map((sermon) => <Item sermon={sermon} />)}
 </div>
