--- a/src/components/sermons/ListItem.astro
+++ b/src/components/sermons/ListItem.astro
@@ -3,19 +3,22 @@ import type { ImageMetadata } from 'astro';
 import { Icon } from 'astro-icon/components';
 import Image from '~/components/common/Image.astro';
 
-import type { Ministry } from '~/types';
+import type { Sermon } from '~/types';
 
 import { getPermalink } from '~/utils/permalinks';
 import { findImage } from '~/utils/images';
+import { getFormattedDate } from '~/utils/utils';
 
 export interface Props {
-  ministry: Ministry;
+  sermon: Sermon;
 }
 
-const { ministry } = Astro.props;
-const image = (await findImage(ministry.image)) as ImageMetadata | undefined;
+const { sermon } = Astro.props;
+const image = (await findImage(sermon.image)) as ImageMetadata | undefined;
 
-const link = getPermalink(ministry.permalink, 'ministry');
+const link = getPermalink(sermon.permalink, 'sermon');
+const speakerLink = getPermalink(sermon.speaker?.permalink, 'speaker');
+const seriesLink = getPermalink(sermon.series?.permalink, 'series');
 ---
 
 <article
@@ -33,7 +36,7 @@ const link = getPermalink(ministry.permalink, 'ministry');
                 widths={[400, 900]}
                 width={900}
                 sizes="(max-width: 900px) 400px, 900px"
-                alt={ministry.title}
+                alt={sermon.title}
                 aspectRatio="16:9"
                 loading="lazy"
                 decoding="async"
@@ -50,7 +53,7 @@ const link = getPermalink(ministry.permalink, 'ministry');
               widths={[400, 900]}
               width={400}
               sizes="(max-width: 900px) 400px, 900px"
-              alt={ministry.title}
+              alt={sermon.title}
               aspectRatio="16:9"
               loading="lazy"
               decoding="async"
@@ -63,26 +66,10 @@ const link = getPermalink(ministry.permalink, 'ministry');
     <header>
       <div class="mb-1">
         <span class="text-sm">
-          {
-            ministry.author && (
-              <>
-                {' '}
-                · <Icon name="tabler:user" class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400" />
-                <span>{ministry.author.replaceAll('-', ' ')}</span>
-              </>
-            )
-          }
-          {
-            ministry.category && (
-              <>
-                {' '}
-                ·{' '}
-                <a class="hover:underline" href={getPermalink(ministry.category.slug, 'category')}>
-                  {ministry.category.title}
-                </a>
-              </>
-            )
-          }
+          {sermon.displayEventType && <span>{sermon.displayEventType}</span>}
+          {' '}
+          · <Icon name="tabler:clock" class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400" />
+          <time datetime={String(sermon.preachDate)} class="inline-block">{getFormattedDate(sermon.preachDate)}</time>
         </span>
       </div>
       <h2 class="text-xl sm:text-2xl font-bold leading-tight mb-2 font-heading dark:text-slate-300">
@@ -92,15 +79,41 @@ const link = getPermalink(ministry.permalink, 'ministry');
               class="inline-block hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200"
               href={link}
             >
-              {ministry.title}
+              {sermon.title}
             </a>
           ) : (
-            ministry.title
+            sermon.title
           )
         }
       </h2>
+      <div class="mb-1">
+        <span class="text-sm">
+          {
+            sermon.series?.title && (
+              <a href={seriesLink}>
+                <Icon name="tabler:category" class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400" />
+                <span>{sermon.series?.title}</span>
+              </a>
+            )
+          }
+        </span>
+      </div>
+      <div class="mb-1">
+        <span class="text-sm">
+          {
+            sermon.speaker?.displayName && (
+              <>
+                <a href={speakerLink}>
+                  <Icon name="tabler:user" class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400" />
+                  <span>{sermon.speaker?.displayName}</span>
+                </a>
+              </>
+            )
+          }
+        </span>
+      </div>
     </header>
 
-    {ministry.excerpt && <p class="flex-grow text-muted dark:text-slate-400 text-lg">{ministry.excerpt}</p>}
+    {sermon.moreInfoText && <p class="flex-grow text-muted dark:text-slate-400 text-lg">{sermon.moreInfoText}</p>}
   </div>
 </article>
