--- a/src/components/speakers/ListItem.astro
+++ b/src/components/speakers/ListItem.astro
@@ -1,21 +1,23 @@
 ---
 import type { ImageMetadata } from 'astro';
-import { Icon } from 'astro-icon/components';
+// import { Icon } from 'astro-icon/components';
 import Image from '~/components/common/Image.astro';
 
-import type { Ministry } from '~/types';
+import type { Speaker } from '~/types';
 
 import { getPermalink } from '~/utils/permalinks';
 import { findImage } from '~/utils/images';
 
 export interface Props {
-  ministry: Ministry;
+  speaker: Speaker;
 }
 
-const { ministry } = Astro.props;
-const image = (await findImage(ministry.image)) as ImageMetadata | undefined;
+const { speaker } = Astro.props;
+const image = (await findImage(speaker.image)) as ImageMetadata | undefined;
 
-const link = getPermalink(ministry.permalink, 'speaker');
+const link = getPermalink(speaker.permalink, 'speaker');
+console.log(speaker.permalink);
+console.log(link);
 ---
 
 <article
@@ -33,7 +35,7 @@ const link = getPermalink(ministry.permalink, 'speaker');
                 widths={[400, 900]}
                 width={900}
                 sizes="(max-width: 900px) 400px, 900px"
-                alt={ministry.title}
+                alt={speaker.displayName}
                 aspectRatio="16:9"
                 loading="lazy"
                 decoding="async"
@@ -50,7 +52,7 @@ const link = getPermalink(ministry.permalink, 'speaker');
               widths={[400, 900]}
               width={400}
               sizes="(max-width: 900px) 400px, 900px"
-              alt={ministry.title}
+              alt={speaker.displayName}
               aspectRatio="16:9"
               loading="lazy"
               decoding="async"
@@ -61,30 +63,6 @@ const link = getPermalink(ministry.permalink, 'speaker');
   }
   <div class="mt-2">
     <header>
-      <div class="mb-1">
-        <span class="text-sm">
-          {
-            ministry.author && (
-              <>
-                {' '}
-                · <Icon name="tabler:user" class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400" />
-                <span>{ministry.author.replaceAll('-', ' ')}</span>
-              </>
-            )
-          }
-          {
-            ministry.category && (
-              <>
-                {' '}
-                ·{' '}
-                <a class="hover:underline" href={getPermalink(ministry.category.slug, 'category')}>
-                  {ministry.category.title}
-                </a>
-              </>
-            )
-          }
-        </span>
-      </div>
       <h2 class="text-xl sm:text-2xl font-bold leading-tight mb-2 font-heading dark:text-slate-300">
         {
           link ? (
@@ -92,15 +70,15 @@ const link = getPermalink(ministry.permalink, 'speaker');
               class="inline-block hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200"
               href={link}
             >
-              {ministry.title}
+              {speaker.displayName}
             </a>
           ) : (
-            ministry.title
+            speaker.displayName
           )
         }
       </h2>
     </header>
 
-    {ministry.excerpt && <p class="flex-grow text-muted dark:text-slate-400 text-lg">{ministry.excerpt}</p>}
+    <!-- {speaker.bio && <p class="flex-grow text-muted dark:text-slate-400 text-lg">{speaker.bio}</p>} -->
   </div>
 </article>
