--- a/src/components/speakers/SingleSpeaker.astro
+++ b/src/components/speakers/SingleSpeaker.astro
@@ -1,41 +1,36 @@
 ---
 import Image from '~/components/common/Image.astro';
-import type { Ministry } from '~/types';
+import type { Speaker } from '~/types';
 
 export interface Props {
-  ministry: Ministry;
+  speaker: Speaker;
   url: string | URL;
 }
 
-const { ministry } = Astro.props;
+const { speaker } = Astro.props;
 ---
 
 <section class="py-8 sm:py-16 lg:py-20 mx-auto">
   <article>
     <header
-      class={ministry.image
+      class={speaker.portaitURL
         ? 'intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade'
         : 'intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade'}
     >
       <h1
         class="px-4 sm:px-6 max-w-3xl mx-auto text-4xl md:text-5xl font-bold leading-tighter tracking-tighter font-heading"
       >
-        {ministry.title}
+        {speaker.displayName}
       </h1>
-      <p
-        class="max-w-3xl mx-auto mt-4 mb-8 px-4 sm:px-6 text-xl md:text-2xl text-muted dark:text-slate-400 text-justify"
-      >
-        {ministry.excerpt}
-      </p>
 
       {
-        ministry.image ? (
+        speaker.portaitURL ? (
           <Image
-            src={ministry.image}
+            src={speaker.portaitURL}
             class="max-w-full lg:max-w-[900px] mx-auto mb-6 sm:rounded-md bg-gray-400 dark:bg-slate-700"
             widths={[400, 900]}
             sizes="(max-width: 900px) 400px, 900px"
-            alt={ministry?.excerpt || ''}
+            alt={speaker.bio || ''}
             width={900}
             height={506}
             loading="eager"
@@ -51,7 +46,14 @@ const { ministry } = Astro.props;
     <div
       class="mx-auto px-6 sm:px-6 max-w-3xl prose prose-md lg:prose-xl dark:prose-invert dark:prose-headings:text-slate-300 prose-headings:font-heading prose-headings:leading-tighter prose-headings:tracking-tighter prose-headings:font-bold prose-a:text-primary dark:prose-a:text-blue-400 prose-img:rounded-md prose-img:shadow-lg mt-8 prose-headings:scroll-mt-[80px] prose-li:my-0"
     >
-      <slot />
+      <p
+        class="max-w-3xl mx-auto mt-4 mb-8 px-4 sm:px-6 text-xl md:text-2xl text-muted dark:text-slate-400 text-justify"
+      >
+        {speaker.bio}
+      </p>
     </div>
   </article>
+</section>
+<section class="py-8 sm:py-16 lg:py-20 mx-auto">
+  <slot />
 </section>
