--- a/src/pages/speakers/[speaker]/index.astro
+++ b/src/pages/speakers/[speaker]/index.astro
@@ -4,36 +4,34 @@ import type { InferGetStaticPropsType, GetStaticPaths } from 'astro';
 import merge from 'lodash.merge';
 import type { ImageMetadata } from 'astro';
 import Layout from '~/layouts/PageLayout.astro';
-import ToSeriesLink from '~/components/series/ToSeriesLink.astro';
-
-import Headline from '~/components/series/Headline.astro';
+import ToSpeakersLink from '~/components/speakers/ToSpeakersLink.astro';
+import Headline from '~/components/sermons/Headline.astro';
 import SermonsList from '~/components/sermons/List.astro';
 
-import { getStaticPathsSeries, seriesRobots } from '~/utils/series';
+import { getStaticPathsSpeakers, speakersRobots } from '~/utils/speakers';
 import { findImage } from '~/utils/images';
 import type { MetaData } from '~/types';
-import { findSermonsBySeries } from '~/utils/sermons';
+import { findSermonsBySpeakers } from '~/utils/sermons';
 
 export const prerender = true;
 
 export const getStaticPaths = (async () => {
-  return await getStaticPathsSeries();
+  return await getStaticPathsSpeakers();
 }) satisfies GetStaticPaths;
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
-const { series } = Astro.props as Props;
+const { speaker } = Astro.props as Props;
 
-// const url = getCanonical(getPermalink(series.permalink, 'series'));
-const image = (await findImage(series.image)) as ImageMetadata | string | undefined;
-const sermons = (await findSermonsBySeries([series.id])) || [];
+const image = (await findImage(speaker.portaitURL)) as ImageMetadata | string | undefined;
+const sermons = await findSermonsBySpeakers([speaker.id]);
 
 const metadata = merge(
   {
-    title: series.title,
+    title: speaker.displayName,
     robots: {
-      index: seriesRobots?.index,
-      follow: seriesRobots?.follow,
+      index: speakersRobots?.index,
+      follow: speakersRobots?.follow,
     },
     openGraph: {
       type: 'article',
@@ -43,14 +41,14 @@ const metadata = merge(
     },
   },
   {}
-  // { ...(series?.metadata ? { ...series.metadata, canonical: series.metadata?.canonical || url } : {}) }
+  // { ...(speaker?.metadata ? { ...speaker.metadata, canonical: speaker.metadata?.canonical || url } : {}) }
 ) as MetaData;
 ---
 
 <Layout metadata={metadata}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
-    <Headline>{series.title} Series</Headline>
+    <Headline>{speaker.displayName}</Headline>
     <SermonsList sermons={sermons} />
   </section>
-  <ToSeriesLink />
+  <ToSpeakersLink />
 </Layout>
