--- a/src/components/ui/ItemGrid.astro
+++ b/src/components/ui/ItemGrid.astro
@@ -32,33 +32,70 @@ const {
         containerClass
       )}
     >
-      {items.map(({ title, description, icon, callToAction, classes: itemClasses = {} }) => (
-        <div class="intersect-once motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
-          <div class={twMerge('flex flex-row max-w-md', panelClass, itemClasses?.panel)}>
-            <div class="flex justify-center">
-              {(icon || defaultIcon) && (
-                <Icon
-                  name={icon || defaultIcon}
-                  class={twMerge('w-7 h-7 mr-2 rtl:mr-0 rtl:ml-2', defaultIconClass, itemClasses?.icon)}
-                />
-              )}
-            </div>
-            <div class="mt-0.5">
-              {title && <h3 class={twMerge('text-xl font-bold', titleClass, itemClasses?.title)}>{title}</h3>}
-              {description && (
-                <p
-                  class={twMerge(`${title ? 'mt-3' : ''} text-muted`, descriptionClass, itemClasses?.description)}
-                  set:html={description}
-                />
-              )}
-              {callToAction && (
-                <div class={twMerge(`${title || description ? 'mt-3' : ''}`, actionClass, itemClasses?.actionClass)}>
-                  <Button variant="link" {...callToAction} />
+      {items.map(({ title, description, icon, link, callToAction, classes: itemClasses = {} }) => (
+        <>
+          {link ? (
+            <a href={link}>
+              <div class="intersect-once motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
+                <div class={twMerge('flex flex-row max-w-md', panelClass, itemClasses?.panel)}>
+                  <div class="flex justify-center">
+                    {(icon || defaultIcon) && (
+                      <Icon
+                        name={icon || defaultIcon}
+                        class={twMerge('w-7 h-7 mr-2 rtl:mr-0 rtl:ml-2', defaultIconClass, itemClasses?.icon)}
+                      />
+                    )}
+                  </div>
+                  <div class="mt-0.5">
+                    {title && <h3 class={twMerge('text-xl font-bold', titleClass, itemClasses?.title)}>{title}</h3>}
+                    {description && (
+                      <p
+                        class={twMerge(`${title ? 'mt-3' : ''} text-muted`, descriptionClass, itemClasses?.description)}
+                        set:html={description}
+                      />
+                    )}
+                    {callToAction && (
+                      <div
+                        class={twMerge(`${title || description ? 'mt-3' : ''}`, actionClass, itemClasses?.actionClass)}
+                      >
+                        <Button variant="link" {...callToAction} />
+                      </div>
+                    )}
+                  </div>
                 </div>
-              )}
+              </div>
+            </a>
+          ) : (
+            <div class="intersect-once motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
+              <div class={twMerge('flex flex-row max-w-md', panelClass, itemClasses?.panel)}>
+                <div class="flex justify-center">
+                  {(icon || defaultIcon) && (
+                    <Icon
+                      name={icon || defaultIcon}
+                      class={twMerge('w-7 h-7 mr-2 rtl:mr-0 rtl:ml-2', defaultIconClass, itemClasses?.icon)}
+                    />
+                  )}
+                </div>
+                <div class="mt-0.5">
+                  {title && <h3 class={twMerge('text-xl font-bold', titleClass, itemClasses?.title)}>{title}</h3>}
+                  {description && (
+                    <p
+                      class={twMerge(`${title ? 'mt-3' : ''} text-muted`, descriptionClass, itemClasses?.description)}
+                      set:html={description}
+                    />
+                  )}
+                  {callToAction && (
+                    <div
+                      class={twMerge(`${title || description ? 'mt-3' : ''}`, actionClass, itemClasses?.actionClass)}
+                    >
+                      <Button variant="link" {...callToAction} />
+                    </div>
+                  )}
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
+          )}
+        </>
       ))}
     </div>
   )
