--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,10 +11,11 @@ import Metadata from '~/components/common/Metadata.astro';
 import SiteVerification from '~/components/common/SiteVerification.astro';
 import Analytics from '~/components/common/Analytics.astro';
 import Fonts from '~/components/common/Fonts.astro';
+import Video from '~/components/common/Video.astro';
 import BasicScripts from '~/components/common/BasicScripts.astro';
 
 // Comment the line below to disable View Transitions
-import { ClientRouter } from 'astro:transitions';
+// import { ClientRouter } from 'astro:transitions';
 
 import type { MetaData as MetaDataType } from '~/types';
 
@@ -37,6 +38,7 @@ const { language, textDirection } = I18N;
     <SiteVerification />
     <Analytics />
     <Fonts />
+    <Video />
 
     <!-- Comment the line below to disable View Transitions -->
     <!-- <ClientRouter fallback="swap" /> -->
