--- a/src/pages/series/index.astro
+++ b/src/pages/series/index.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import SeriesList from '~/components/series/List.astro';
+import Features2 from '~/components/widgets/Features2.astro';
 import Headline from '~/components/series/Headline.astro';
 
+import { getPermalink } from '~/utils/permalinks';
 import { seriesListRobots, fetchAllSeries } from '~/utils/series';
 
 export const prerender = true;
@@ -23,6 +24,13 @@ const metadata = {
 <Layout metadata={metadata}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline>Series</Headline>
-    <SeriesList allSeries={allSeries} />
+    <Features2
+      columns={2}
+      defaultIcon="tabler:category"
+      items={allSeries.map((series) => ({
+        title: series.title,
+        link: getPermalink(series.permalink, 'series'),
+      }))}
+    />
   </section>
 </Layout>
