--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -12,6 +12,7 @@ interface Link {
 
 interface Links {
   title?: string;
+  href?: string;
   links: Array<Link>;
 }
 
@@ -59,9 +60,15 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
         </div>
       </div>
       {
-        links.map(({ title, links }) => (
+        links.map(({ title, href, links }) => (
           <div class="col-span-6 md:col-span-3 lg:col-span-2">
-            <div class="dark:text-gray-300 font-medium mb-2">{title}</div>
+            {href ? (
+              <a href={href}>
+                <div class="dark:text-gray-300 font-medium mb-2">{title}</div>
+              </a>
+            ) : (
+              <div class="dark:text-gray-300 font-medium mb-2">{title}</div>
+            )}
             {links && Array.isArray(links) && links.length > 0 && (
               <ul class="text-sm">
                 {links.map(({ text, href, ariaLabel }) => (
