--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -40,7 +40,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
           <br />{(<Icon name="tabler:map-pin" class="w-5 h-5 inline" />)}
           <span set:html={SITE?.address} />, <span set:html={SITE?.cityState} />
           <br />{(<Icon name="tabler:mail" class="w-5 h-5 inline" />)}
-          <a href=`mailto:${SITE?.email}?subject=Contact from Website` set:html={SITE?.email} />
+          <a href=`mailto:${SITE?.email}?subject=Contact from Pleasant Home Website` set:html={SITE?.email} />
           <br />{(<Icon name="tabler:phone" class="w-5 h-5 inline" />)}
           <span set:html={SITE?.phone} />
         </div>
