--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import HeroText from '~/components/widgets/HeroText.astro';
+import Headline from '~/components/sermons/Headline.astro';
 import ContactUs from '~/components/widgets/Contact.astro';
 import Features2 from '~/components/widgets/Features2.astro';
+
+import { SITE } from 'astrowind:config';
 
 const metadata = {
   title: 'Contact',
@@ -10,70 +12,78 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-  <!-- HeroText Widget ******************* -->
+  <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
+    <Headline title="Contact Us" />
 
-  <HeroText tagline="Contact" title="Let's Connect!" />
+    <ContactUs
+      id="contact"
+      title="Send us a message today!"
+      action="https://api.web3forms.com/submit"
+      method="POST"
+      inputs={[
+        {
+          type: 'hidden',
+          hidden: true,
+          name: 'access_key',
+          value: '7acd8bf6-cb4a-4eaf-9b4a-da4cee453fa3',
+        },
+        {
+          type: 'hidden',
+          hidden: true,
+          name: 'redirect',
+          value: `${SITE?.site}/thanks`,
+        },
+        {
+          type: 'hidden',
+          hidden: true,
+          name: 'subject',
+          value: 'Contact Form from Pleasant Home Website',
+        },
+        {
+          type: 'hidden',
+          hidden: true,
+          name: 'from_name',
+          value: 'pleasanthome.cc',
+        },
+        {
+          type: 'text',
+          name: 'name',
+          label: 'Name',
+          placeholder: 'Your Name',
+        },
+        {
+          type: 'email',
+          name: 'email',
+          label: 'Email',
+          placeholder: 'email@server.com',
+        },
+      ]}
+      textarea={{
+        label: 'Message',
+        placeholder: 'What do you want to share?',
+      }}
+    />
 
-  <ContactUs
-    id="form"
-    title="Drop us a message today!"
-    subtitle="For quicker answers, explore our FAQs section. You may find the solution you're looking  for right there! If not, our support team is delighted to help you."
-    inputs={[
-      {
-        type: 'text',
-        name: 'name',
-        label: 'Name',
-      },
-      {
-        type: 'email',
-        name: 'email',
-        label: 'Email',
-      },
-    ]}
-    textarea={{
-      label: 'Message',
-    }}
-    disclaimer={{
-      label:
-        'By submitting this contact form, you acknowledge and agree to the collection of your personal information.',
-    }}
-    description="Our support team typically responds within 24 business hours."
-  />
+    <!-- Features2 Widget ************** -->
 
-  <!-- Features2 Widget ************** -->
-
-  <Features2
-    title="We are here to help!"
-    items={[
-      {
-        title: 'General support',
-        description: `Chat with us for inquiries related to account management, website navigation, payment issues, accessing purchased templates or general questions about the website's functionality.`,
-      },
-      {
-        title: 'Contact sales',
-        description:
-          'Chat with us for questions about purchases, customization options, licensing for commercial use, inquiries about specific template, etc.',
-      },
-      {
-        title: 'Technical support',
-        description:
-          'Chat with us when facing issues like template installation, problems editing difficulties, compatibility issues with software or download errors, or other technical challenges related to using the templates.',
-      },
-      {
-        title: 'Phone',
-        description: '+1 (234) 567-890',
-        icon: 'tabler:headset',
-      },
-      {
-        title: 'Email',
-        description: 'contact@support.com',
-        icon: 'tabler:mail',
-      },
-      {
-        title: 'Location',
-        description: '1234 Lorem Ipsum St, 12345, Miami, EEUU',
-        icon: 'tabler:map-pin',
-      },
-    ]}
-  />
+    <Features2
+      items={[
+        {
+          title: 'Phone',
+          description: SITE?.phone,
+          icon: 'tabler:phone',
+        },
+        {
+          title: 'Email',
+          description: `<a href="mailto:${SITE?.email}?subject=Contact from Pleasant Home Website">${SITE?.email}</a>`,
+          icon: 'tabler:mail',
+        },
+        {
+          title: 'Location',
+          description: `${SITE?.address}<br />${SITE?.cityState}`,
+          icon: 'tabler:map-pin',
+        },
+      ]}
+    />
+  </section>
 </Layout>
