--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -47,12 +47,14 @@ const metadata = {
         },
         {
           type: 'text',
+          required: true,
           name: 'name',
           label: 'Name',
           placeholder: 'Your Name',
         },
         {
           type: 'email',
+          required: true,
           name: 'email',
           label: 'Email',
           placeholder: 'email@server.com',
