fix: remove today from title on contact page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ const metadata = {
 
     <ContactUs
       id="contact"
-      title="Send us a message today!"
+      title="Send us a message!"
       action="https://api.web3forms.com/submit"
       method="POST"
       inputs={[
