--- a/src/components/widgets/FAQs.astro
+++ b/src/components/widgets/FAQs.astro
@@ -10,6 +10,7 @@ const {
   tagline = '',
   items = [],
   columns = 2,
+  defaultIcon = 'tabler:chevron-right',
 
   id,
   isDark = false,
@@ -23,7 +24,7 @@ const {
   <ItemGrid
     items={items}
     columns={columns}
-    defaultIcon="tabler:chevron-right"
+    defaultIcon={defaultIcon}
     classes={{
       container: `${columns === 1 ? 'max-w-4xl' : ''} gap-y-8 md:gap-y-12`,
       panel: 'max-w-none',
