--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -26,7 +26,7 @@ import '@fontsource-variable/inter';
     --aw-font-heading: 'Inter Variable';
 
     --aw-color-primary: rgb(19, 170, 160);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-secondary: rgb(141, 197, 73);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(0 0 0);
@@ -47,7 +47,7 @@ import '@fontsource-variable/inter';
     --aw-font-heading: 'Inter Variable';
 
     --aw-color-primary: rgb(19, 170, 160);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-secondary: rgb(141, 197, 73);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(247, 248, 248);
