--- a/src/pages/series/[series]/index.astro
+++ b/src/pages/series/[series]/index.astro
@@ -7,12 +7,13 @@ import Layout from '~/layouts/PageLayout.astro';
 import ToSeriesLink from '~/components/series/ToSeriesLink.astro';
 
 import Headline from '~/components/series/Headline.astro';
-import SermonsList from '~/components/sermons/List.astro';
 
 import { getStaticPathsSeries, seriesRobots } from '~/utils/series';
 import { findImage } from '~/utils/images';
 import type { MetaData } from '~/types';
 import { findSermonsBySeries } from '~/utils/sermons';
+import { MantineProvider } from '@mantine/core';
+import SermonsTable from '~/components/sermons/SermonsTable';
 
 export const getStaticPaths = (async () => {
   return await getStaticPathsSeries();
@@ -48,7 +49,9 @@ const metadata = merge(
 <Layout metadata={metadata}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline>{series.title} Series</Headline>
-    <SermonsList sermons={sermons} />
+    <MantineProvider>
+      <SermonsTable sermons={sermons} />
+    </MantineProvider>
   </section>
   <ToSeriesLink />
 </Layout>
