--- a/src/pages/speakers/[speaker]/index.astro
+++ b/src/pages/speakers/[speaker]/index.astro
@@ -6,7 +6,8 @@ import type { ImageMetadata } from 'astro';
 import Layout from '~/layouts/PageLayout.astro';
 import ToSpeakersLink from '~/components/speakers/ToSpeakersLink.astro';
 import Headline from '~/components/sermons/Headline.astro';
-import SermonsList from '~/components/sermons/List.astro';
+import { MantineProvider } from '@mantine/core';
+import SermonsTable from '~/components/sermons/SermonsTable';
 
 import { getStaticPathsSpeakers, speakersRobots } from '~/utils/speakers';
 import { findImage } from '~/utils/images';
@@ -46,7 +47,9 @@ const metadata = merge(
 <Layout metadata={metadata}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline>{speaker.displayName}</Headline>
-    <SermonsList sermons={sermons} />
+    <MantineProvider>
+      <SermonsTable sermons={sermons} />
+    </MantineProvider>
   </section>
   <ToSpeakersLink />
 </Layout>
